--- a/java_install.yml
+++ b/java_install.yml
@@ -1,13 +1,7 @@
 ---
 - hosts: local
-  tasks:
-    - name: Update APT package manager repositories cache
-      become: true
-      apt:
-        update_cache: yes
-    - name: Install Java 
-      become: yes
-      apt:
-        name:  openjdk-8-jdk
-        state: present
 
+  tasks:
+  - name: INSTALLING JAVA
+    include_role: 
+      name: java_role
