--- a/install-tomcat/tasks/download_extract_tomcat.yml
+++ b/install-tomcat/tasks/download_extract_tomcat.yml
@@ -4,6 +4,7 @@
   get_url:
      url: https://downloads.apache.org/tomcat/tomcat-9/v9.0.52/bin/apache-tomcat-9.0.52.tar.gz
      dest: /opt/tomcat/
+     owner: root
 - name: extract
   unarchive:
      src: /opt/tomcat/apache-tomcat-9.0.52.tar.gz
