--- a/mysql-role/tasks/install_startmysql.yml
+++ b/mysql-role/tasks/install_startmysql.yml
@@ -1,7 +1,7 @@
 --- 
 - name: Installing mysql 
   apt:
-   name: [' libmysqlclient-dev', 'mysql-server', 'mysql-client']
+   name: [' libmysqlclient-dev', 'mysql-server', 'mysql-client', 'python3-mysqldb']
    state: present
    update_cache: true
 
