updating tomcat role

--- a/install-tomcat/tasks/download_extract_tomcat.yml
+++ b/install-tomcat/tasks/download_extract_tomcat.yml
@@ -1,12 +1,16 @@
 ---
-
-- name: download tomcat.tar
+- name: Download Tomcat
   get_url:
-     url: https://downloads.apache.org/tomcat/tomcat-9/v9.0.52/bin/apache-tomcat-9.0.52.tar.gz
-     dest: /opt/tomcat/
-     owner: root
-- name: extract
+     url: https://archive.apache.org/dist/tomcat/tomcat-9/v{{ tomcat_ver }}/bin/apache-tomcat-{{ tomcat_ver }}.tar.gz
+     dest: /tmp/apache-tomcat-{{ tomcat_ver }}.tar.gz
+     owner: tomcat
+     group: tomcat
+
+- name: Extract tomcat archive
   unarchive:
-     src: /opt/tomcat/apache-tomcat-9.0.52.tar.gz
-     remote_src: true
-     dest: /opt/tomcat
+    src:  /tmp/apache-tomcat-{{ tomcat_ver }}.tar.gz
+    dest: /usr/share/tomcat
+    owner: tomcat
+    group: tomcat
+    remote_src: yes
+    creates: /usr/share/tomcat/bin
