--- a/install-tomcat/tasks/install_java_wget.yml
+++ b/install-tomcat/tasks/install_java_wget.yml
@@ -1,7 +1,5 @@
 ---
-- name: install pre req
+- name: Install Default Java (Debian/Ubuntu)
   apt:
-     name:
-        - wget
-        - default-jdk
-     state: present
+    name: ['default-jdk', 'wget']
+    state: present
