--- a/install-tomcat/tasks/directory.yml
+++ b/install-tomcat/tasks/directory.yml
@@ -1,6 +1,7 @@
 ---
-
-- name: ensuring directory
-  file:
-     name: /opt/tomcat
+ - name: Create a tomcat directory
+   file:
+     path: /usr/share/tomcat
      state: directory
+     owner: tomcat
+     group: tomcat
