adding tom role

--- a/mysql-role/tasks/install_startmysql.yml
+++ b/mysql-role/tasks/install_startmysql.yml
@@ -1,11 +1,7 @@
 --- 
 - name: Installing mysql 
   apt:
-<<<<<<< HEAD
-   name: [' libmysqlclient-dev', 'mysql-server', 'mysql-client','python3-mysqldb']
-=======
-   name: [' libmysqlclient-dev', 'mysql-server', 'mysql-client', 'python3-mysqldb']
->>>>>>> 4a388dbc17e737069d0955f172e5a47e48a2165f
+   name: [' libmysqlclient-dev', 'mysql-server', 'mysql-client']
    state: present
    update_cache: true
 
